--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ label {
     font-size: 1.1875rem;
     border-bottom: 1px dotted black;
 }
+.input-padrao:focus {
+    box-shadow: 0 0 0 0;
+    outline: 0;
+}
 button {
     color: #AB4BEA;
     padding: 16px 32px;
